Add routes for adding and removing items and vas items from the cart
