# internal/interfaces/api/cart_handler.go
@@ -26,6 +26,7 @@ func NewCartHandler(cartApp application.CartAppInterface) *CartHandler {
 // @Param cartId path int true "Cart ID"
 // @Param promotionId path int true "Promotion ID"
 // @Success 200 {string} string "Promotion applied successfully"
+// @Failure 409 {string} string "Promotion already applied"
 // @Router /api/v1/cart/{cartId}/promotion/{promotionId} [post]
 func (h *CartHandler) ApplyPromotion(c *gin.Context) {
 	cartId, err := strconv.Atoi(c.Param("cartId"))
@@ -41,8 +42,8 @@ func (h *CartHandler) ApplyPromotion(c *gin.Context) {
 	}
 
 	cart, promErr := h.cartApp.ApplyPromotion(cartId, promotionId)
-	if err != promErr {
-		c.JSON(500, gin.H{"message": err.Error()})
+	if promErr != nil {
+		c.JSON(409, gin.H{"message": promErr.Error()})
 		return
 	}
 
@@ -74,7 +75,8 @@ func (h *CartHandler) Display(c *gin.Context) {
 	}
 
 	c.JSON(200, gin.H{
-		"message": cart,
+		"message": "Cart displayed successfully",
+		"data":    cart,
 	})
 }
 
@@ -122,18 +124,19 @@ func (h *CartHandler) AddItem(c *gin.Context) {
 		return
 	}
 
+	cartId, err := strconv.Atoi(c.Param("cartId"))
+	if err != nil {
+		c.JSON(400, gin.H{"message": err.Error()})
+		return
+	}
+
 	itemEntity := data.ToEntity()
-	err := itemEntity.Validate()
+	itemEntity.CartID = cartId
+	err = itemEntity.Validate()
 	if err != nil {
 		c.JSON(400, gin.H{
 			"message": err.Error(),
 		})
-		return
-	}
-
-	cartId, err := strconv.Atoi(c.Param("cartId"))
-	if err != nil {
-		c.JSON(400, gin.H{"message": err.Error()})
 		return
 	}
 
@@ -144,4 +147,92 @@ func (h *CartHandler) AddItem(c *gin.Context) {
 	}
 
 	c.JSON(200, gin.H{"message": "Item added successfully", "data": item})
+}
+
+// @Summary Add vas item
+// @Description Add a vas item to a cart
+// @Tags Cart
+// @Accept json
+// @Produce json
+// @Param item body dto.VasItemCreateRequest true "VasItem"
+// @Router /api/v1/cart/{cartId}/item/{itemId}/vas-item/{vasItemId} [post]
+func (h *CartHandler) AddVasItem(c *gin.Context) {
+	var data dto.VasItemCreateRequest
+
+	if err := c.ShouldBindJSON(&data); err != nil {
+		c.JSON(400, gin.H{"message": err.Error()})
+		return
+	}
+
+	vasItemEntity := data.ToEntity()
+	err := vasItemEntity.Validate()
+	if err != nil {
+		c.JSON(400, gin.H{
+			"message": err.Error(),
+		})
+		return
+	}
+
+	vasItem, err := h.cartApp.AddVasItem(vasItemEntity)
+	if err != nil {
+		c.JSON(500, gin.H{"message": err.Error()})
+		return
+	}
+
+	c.JSON(200, gin.H{"message": "Vas item added successfully", "data": vasItem})
+}
+
+// @Summary Remove Item from cart
+// @Description Remove an item from a cart
+// @Tags Cart
+// @Accept json
+// @Produce json
+// @Param itemId path int true "Item ID"
+// @Success 200 {string} string "Item removed successfully"
+// @Router /api/v1/cart/item/{itemId} [delete]
+func (h *CartHandler) RemoveItem(c *gin.Context) {
+
+	itemId, err := strconv.Atoi(c.Param("itemId"))
+	if err != nil {
+		c.JSON(400, gin.H{"message": err.Error()})
+		return
+	}
+
+	cart, err := h.cartApp.RemoveItem(itemId)
+	if err != nil {
+		c.JSON(500, gin.H{"message": err.Error()})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"message": "Item removed successfully",
+		"data":    cart,
+	})
+}
+
+// @Summary Remove vas item from cart
+// @Description Remove a vas item from a cart
+// @Tags Cart
+// @Accept json
+// @Produce json
+// @Param vasItemId path int true "Vas Item ID"
+// @Success 200 {string} string "Vas item removed successfully"
+// @Router /api/v1/cart/vas-item/{vasItemId} [delete]
+func (h *CartHandler) RemoveVasItem(c *gin.Context) {
+	vasItemId, err := strconv.Atoi(c.Param("vasItemId"))
+	if err != nil {
+		c.JSON(400, gin.H{"message": err.Error()})
+		return
+	}
+
+	cart, err := h.cartApp.RemoveVasItem(vasItemId)
+	if err != nil {
+		c.JSON(500, gin.H{"message": err.Error()})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"message": "Vas item removed successfully",
+		"data":    cart,
+	})
 }
